# FRED

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FRED Bronze Load.ipynb  FRED Daily API CAll.ipynb  FRED Gold  Load.ipynb  FRED Silver Load.ipynb  LICENSE  README.md  SECURITY.md  databricks.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: config.yaml
docs/: architecture.md  constraints_reference.md  data_dictionary.md  dlt_pipeline_setup.md  production_deployment.md
environments/: default.yml  dev.yml  prod.yml
notebooks/: 01_API_Setup.py  02_Bronze_Setup.py  03_Silver_Setup.py  04_Gold_Setup.py  05_Daily_API_Call.py  06_Bronze_Load.py  07_Silver_Load.py  08_Gold_Load.py  ZZ_Test.ipynb
notebooks/archive/: 07_Silver_Load.py  README.md  ZZ_Test.ipynb
resources/: 05_Daily_API_Call.job.yml  jobs.yml  pipelines.yml
sql/: setup_all.sql  validate_fred.sql
src/: __init__.py
src/utils/: __init__.py  api_helpers.py
tests/: __init__.py  test_fred_pipeline.py
